Translation EN/DK

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -177,7 +177,7 @@
         <section class="playlists-view hidden" id="playlistsView">
           <header class="playlists-header">
             <div class="playlists-heading">
-              <span class="playlists-badge">Playlists</span>
+              <span class="playlists-badge" data-i18n="playlistsBadge">Playlists</span>
               <h2 data-i18n="yourPlaylists">Your playlists</h2>
               <p class="playlists-subtitle" data-i18n="playlistsSubtitle">Create custom playlists and group your favourite tracks by mood, activity or genre.</p>
             </div>
@@ -198,7 +198,7 @@
 
               <div class="playlists-list-container">
                 <div class="playlists-list" id="playlistsList">
-                  <p class="empty-playlists-message">You haven’t created any playlists yet.</p>
+                  <p class="empty-playlists-message" data-i18n="noPlaylists">You haven't created any playlists yet.</p>
                 </div>
               </div>
             </aside>
@@ -229,8 +229,8 @@
               </div>
 
               <div class="playlist-detail-meta">
-                <span class="playlist-detail-pill">0 songs</span>
-                <span class="playlist-detail-pill playlist-detail-pill--muted">No duration</span>
+                  <span class="playlist-detail-pill" data-i18n="zeroSongs">0 songs</span>
+                  <span class="playlist-detail-pill playlist-detail-pill--muted" data-i18n="noDuration">No duration</span>
               </div>
 
               <div class="playlist-songs-wrapper">
